# CreatorOS

./: .gitattributes  .gitignore  .mcp.json  pyproject.toml
creatoros/: __init__.py  analyze.py  benchmark.py  cli.py
creatoros/intelligence/: __init__.py  analyze.py  corpus.py  findings.py  strength.py
creatoros/metrics/: __init__.py  channel.py  engine.py  lexicon.py  narrative.py  text.py  video.py
creatoros/reporting/: __init__.py  json_renderer.py  markdown.py  metadata.py  renderer.py
docs/: ENGINEERING.md  PROJECT_PHASES.md  PROJECT_VISION.md  browser-automation.md  package-management.md
docs/decisions/: 0001-memory-architecture.md  README.md  adr-002-youtube-extraction-stack.md  adr-003-why-stdlib-sqlite3-no-orm.md  adr-004-why-argparse.md  adr-005-why-playwright-library-not-mcp.md  adr-006-raw-derived-analysis.md  adr-007-report-export-command-surface.md  adr-008-versioning-strategy.md  adr-009-error-philosophy.md  adr-010-persistence-strategy.md  adr-011-non-scalar-evidence-shape.md
docs/modules/: 001-youtube-intelligence.md  002-channel-intelligence.md  003-knowledge-layer.md
docs/reviews/: pr-0006-review.md
docs/rfcs/: README.md  rfc-001-topic-representation.md  rfc-002-what-is-evidence.md
docs/standards/: folders.md  markdown.md  naming.md  python.md  research.md
docs/usage/: CHANNEL_ANALYSIS_CHECKLIST.md
examples/playwright/: screenshot.py
research/competitors/: competitive-reuse-audit.md
research/reports/: next_milestone_product_review.md  phase_2_usage_executive_summary.md  phase_3_evidence_quality_usage.md
research/stack_evaluation/: README.md  chroma.md  sqlite.md  supabase.md
research/technology/: README.md  duckdb.md  reuse_audit.md  sqlite.md  youtube_library_evaluation.md
scripts/: screenshot_example.py
tests/: test_analyze.py  test_benchmark.py  test_cli.py  test_intelligence.py  test_metrics.py  test_narrative.py  test_reporting.py  test_strength.py  test_text.py
tests/golden/: channel_report.json  channel_report.md
