[project]
name = "creator-os"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.61.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.7.4",
]

[project.scripts]
# MVP: run via `uv run creatoros ...` (not installed globally). Packaging is deferred.
creatoros = "creatoros.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["creatoros"]

[tool.ruff]
# Match the pinned interpreter (see .python-version).
target-version = "py313"
line-length = 88
src = ["creatoros", "examples", "scripts", "tools"]
# No custom `exclude`: Ruff's built-in defaults already skip .venv and generated
# artifacts (build/, dist/, __pycache__, .*_cache/, node_modules). We intentionally
# do NOT exclude any source/content dirs (database, research, etc.) so they are linted.

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modern syntax)
    "B",    # flake8-bugbear (likely bugs)
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
